# chiaki-ps5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
qml/: ControlBar.qml  HomeView.qml  HostCard.qml  Main.qml  SettingsOverlay.qml  StatusBar.qml  Theme.qml
scripts/: chiaki-ps5.desktop  install.sh
src/: hostmanager.cpp  hostmanager.h  main.cpp  processmanager.cpp  processmanager.h
src/main/: chiaki-config.ts  discovery.ts  index.ts  ipc-handlers.ts  process-manager.ts  psn-auth.ts  registration.ts  types.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html
src/renderer/components/: AddConsoleModal.tsx  CardCarousel.tsx  ConsoleCard.tsx  ControlBar.tsx  EmptyState.tsx  PsnLoginModal.tsx  SettingsPanel.tsx  StatusBar.tsx  Toast.tsx
src/renderer/hooks/: useGamepad.ts  useHosts.ts  useSettings.ts  useToast.ts
src/renderer/styles/: globals.css  theme.ts
